<resources>

    <!--App-->
    <string name="app_name">Marvelissimo</string>
    <string name="app_logo_desc">Logo</string>

    <!--Data-->
    <string name="thumbnail_desc">Thumbnail</string>
    <string name="info_img_desc">Image</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_characters">Characters</string>
    <string name="title_comics">Comics</string>
    <string name="title_favourites">Favourites</string>
    <string name="no_description_found">No description found</string>

    <!--Login and registration-->
    <string name="email_login_icon_desc">Email field icon</string>
    <string name="email_field_desc">Email field</string>
    <string name="password_login_icon_desc">Password field icon</string>
    <string name="password_field_desc">Password Field</string>
    <string name="hintLogInEmail">Email</string>
    <string name="hintLoginPassword">Password</string>
    <string name="logInButton">Login</string>
    <string name="loginRegisterButton">Register</string>
    <string name="first_name_register">First Name</string>
    <string name="lastName_register">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="signup_button_register">Not a member? Sign up now.</string>
    <string name="signup_confirm_register">Sign up now.</string>
    <string name="failed_missing_signIn">Sign in failed, not all fields are set</string>
    <string name="fields_missing_registration">Registration failed, not all fields were filled</string>

    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_item_users_title">Users</string>
    <string name="nav_drawer_item_online_users_title">Online users</string>
    <string name="nav_drawer_item_offline_users_title">Offline users</string>
    <string name="nav_drawer_item_settings_title">Settings</string>
    <string name="nav_drawer_item_logout_title">Logout</string>

</resources>
