<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
            android:id="@+id/navigation_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/title_search"
            app:showAsAction="always|collapseActionView"/>
    <!--app:actionViewrClass="android.support.v7.widget.SearchView"/>-->

    <item
            android:id="@+id/navigation_characters"
            android:icon="@drawable/icons8_anonymous_mask_50"
            android:title="@string/title_characters"/>

    <item
            android:id="@+id/navigation_comics"
            android:icon="@drawable/icons8_reading_50"
            android:title="@string/title_comics"/>

    <item
            android:id="@+id/navigation_favourites"
            android:icon="@drawable/icons8_heart_outline_50"
            android:title="@string/title_favourites"/>

</menu>
