<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
=======
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
>>>>>>> Refactoring and cleanup. Better string res

    <item
        android:id="@+id/navigation_characters"
        android:icon="@drawable/fas_user_ninja"
        android:title="@string/title_characters" />

    <item
        android:id="@+id/navigation_comics"
        android:icon="@drawable/fas_book_reader"
        android:title="@string/title_comics" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/fas_heart"
        android:title="@string/title_favourites" />

</menu>
